# RobesCecchetti

./: .gitignore  0Robes.pd  README.md
fw/: config.cmake  main.cpp  motor.h  remote.cpp  remote.h  sequence.h  settings.h
lib/pico-ap/: CMakeLists.txt
lib/pico_https/: CMakeLists.txt
lib/pico_https/pico_http/: websocket_handler.cpp
lib/pico_https/pico_logger/: pico_logger.c
wifiHttpsFw/: .gitignore  config.cmake  config.html  flash-hello.html  flash.html  flash_html.h  fraise_manager.h  main.cpp  request_handler.cpp  request_handler.h  romtable.h  settings.h  static.html  stdio_tcp.cpp  stdio_tcp.h  tcp_server.c  tcp_server.h  wifi_manager.h
wifiHttpsFw/boards/pico_w/: board.cmake  boardconfig.h
wifiHttpsFw/config/: general_config.h  logging_config.h  lwipopts.h  lwipopts_common.h  lwipopts_debug_full.h  lwipopts_debug_off.h  mbedtls_config.h  wifi.h
wifiHttpsFw/config/certificate/: cert.h  key.h  key.pem
wifiHttpsFw/include/: lwipopts.h
